# portfolio-questionnaire-django

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: db.sqlite3
src/app/: settings.py  urls.py
src/questionnaire/: admin.py  forms.py  models.py  urls.py  views.py
src/questionnaire/migrations/: 0001_initial.py  0002_alter_answer_created_at_alter_answer_updated_at_and_more.py  0003_alter_answer_options_alter_choice_options_and_more.py
src/questionnaire/templates/questionnaire/: _base.html  answer_create.html  questionnaire_create.html  questionnaire_list.html  questionnaire_result.html
src/questionnaire/tests/: test_models.py  test_views.py
